@@ -3,7 +3,7 @@ import "../../../globals.css";
 export default function loading() {
   return (
     <div className={"loading_main"}>
-      <img className={"loading"} src="/anime.gif"></img>
+      <img className={"loading"} src="/anime.gif" alt="loading anime gif"></img>
     </div>
   );
 }
