@@ -3,7 +3,7 @@ import Styles from './movies.module.css'
 export default function Loading() {
   return (
     <div className={Styles.loading_main}>
-        <img className={Styles.loading} src="/anime.gif"></img>
+        <img className={Styles.loading} src="/anime.gif" alt='anime loading'></img>
     </div>
   )
 }
