@@ -3,9 +3,8 @@ import search from "@/lib/search"
 
 export default async function page() {
 
-  const searchcrow = await search({query:'bleach'})
-  console.log(searchcrow)
+
   return (
-    <div>page</div>
+    <div>get fucked in the ass</div>
   )
 }
