@@ -3,7 +3,7 @@ import "./globals.css"
 export default function Loading() {
   return (
     <div className={"loading_main"}>
-        <img className={"loading"}src="/anime.gif"></img>
+        <img className={"loading"}src="/anime.gif" alt=" anime background"></img>
     </div>
   )
 }
